--- a/chat.html
+++ b/chat.html
@@ -4,68 +4,79 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chat with AI</title>
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <style>
-        body { font-family: Arial, sans-serif; margin: 20px; }
-        #chat-box { width: 100%; height: 300px; border: 1px solid #ccc; overflow-y: scroll; padding: 10px; }
-        #input-box { width: 80%; padding: 5px; }
-        #send-btn { padding: 5px 10px; }
+        body { font-family: Arial, sans-serif; text-align: center; margin: 20px; }
+        #chatbox { width: 90%; height: 400px; border: 1px solid #ccc; padding: 10px; overflow-y: auto; text-align: left; margin: auto; }
+        #userInput { width: 70%; padding: 8px; }
+        button { padding: 8px; margin-left: 5px; }
+        #exportBtn { margin-top: 10px; display: none; }
     </style>
 </head>
 <body>
 
-    <h2>Chat with AI</h2>
-    <div id="chat-box"></div>
-    <input type="text" id="input-box" placeholder="Type your message...">
-    <button id="send-btn">Send</button>
-    
-    <script>
-        const chatBox = document.getElementById("chat-box");
-        const inputBox = document.getElementById("input-box");
-        const sendBtn = document.getElementById("send-btn");
-        const participantID = new URLSearchParams(window.location.search).get("participantID") || "unknown";
-        
-        let chatHistory = [];
+<h2>Chat with AI</h2>
+<div id="chatbox"></div>
+<input type="text" id="userInput" placeholder="Type your message...">
+<button onclick="sendMessage()">Send</button>
+<button id="exportBtn" onclick="exportChat()">Export Chat</button>
 
-        sendBtn.addEventListener("click", async () => {
-            const userMessage = inputBox.value;
-            if (!userMessage) return;
+<script>
+    const apiKey = "YOUR_OPENAI_API_KEY";  // 🔴 Replace with your OpenAI API key
+    const participantID = new URLSearchParams(window.location.search).get("participantID") || "unknown";
+    let chatHistory = [];
 
-            chatHistory.push({ role: "user", content: userMessage });
-            updateChatBox();
-            inputBox.value = "";
+    function displayMessage(sender, message) {
+        document.getElementById("chatbox").innerHTML += `<p><strong>${sender}:</strong> ${message}</p>`;
+        document.getElementById("chatbox").scrollTop = document.getElementById("chatbox").scrollHeight;
+    }
 
-            const response = await fetchChatGPTResponse(userMessage);
-            chatHistory.push({ role: "assistant", content: response });
-            updateChatBox();
+    async function sendMessage() {
+        let userInput = document.getElementById("userInput").value.trim();
+        if (!userInput) return;
 
-            // Send chat history to Qualtrics
-            sendToQualtrics();
+        // Display user's message
+        chatHistory.push({ role: "user", content: userInput });
+        displayMessage("You", userInput);
+        document.getElementById("userInput").value = "";
+
+        // Call OpenAI API
+        const response = await fetch("https://api.openai.com/v1/chat/completions", {
+            method: "POST",
+            headers: {
+                "Content-Type": "application/json",
+                "Authorization": `Bearer ${apiKey}`
+            },
+            body: JSON.stringify({
+                model: "gpt-3.5-turbo",
+                messages: chatHistory,
+                temperature: 0.7
+            })
         });
 
-        async function fetchChatGPTResponse(message) {
-            const response = await axios.post("https://api.openai.com/v1/chat/completions", {
-                model: "gpt-4",
-                messages: chatHistory,
-            }, {
-                headers: {
-                    "Authorization": "Bearer YOUR_OPENAI_API_KEY",
-                    "Content-Type": "application/json"
-                }
-            });
-            return response.data.choices[0].message.content;
-        }
+        const data = await response.json();
+        const aiReply = data.choices[0].message.content;
 
-        function updateChatBox() {
-            chatBox.innerHTML = chatHistory.map(m => `<p><b>${m.role}:</b> ${m.content}</p>`).join("");
-            chatBox.scrollTop = chatBox.scrollHeight;
-        }
+        // Display AI response
+        chatHistory.push({ role: "assistant", content: aiReply });
+        displayMessage("AI", aiReply);
 
-        function sendToQualtrics() {
-            const chatData = JSON.stringify(chatHistory);
-            window.parent.postMessage({ chatData, participantID }, "*");
-        }
-    </script>
+        // Show Export Button after conversation starts
+        document.getElementById("exportBtn").style.display = "block";
+    }
+
+    function exportChat() {
+        const chatData = {
+            participantID: participantID,
+            history: chatHistory
+        };
+
+        const blob = new Blob([JSON.stringify(chatData, null, 2)], { type: "application/json" });
+        const a = document.createElement("a");
+        a.href = URL.createObjectURL(blob);
+        a.download = `chat_history_${participantID}.json`;
+        a.click();
+    }
+</script>
 
 </body>
 </html>
