--- a/chat.html
+++ b/chat.html
@@ -1,73 +1,118 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chat with AI</title>
-    <style>
-        body { font-family: Arial, sans-serif; text-align: center; margin: 20px; }
-        #chatbox { width: 90%; height: 400px; border: 1px solid #ccc; padding: 10px; overflow-y: auto; text-align: left; margin: auto; }
-        #userInput { width: 70%; padding: 8px; }
-        button { padding: 8px; margin-left: 5px; }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Chat with OpenAI (via OpenRouter)</title>
+  <style>
+    /* Basic styling for the chat interface */
+    body {
+      font-family: Arial, sans-serif;
+      padding: 10px;
+      background-color: #f9f9f9;
+    }
+    #chatbox {
+      width: 100%;
+      max-width: 600px;
+      margin: 0 auto;
+      background-color: white;
+      border-radius: 8px;
+      padding: 20px;
+      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    }
+    #chatHistory {
+      max-height: 400px;
+      overflow-y: auto;
+      margin-bottom: 20px;
+    }
+    input[type="text"] {
+      width: 80%;
+      padding: 10px;
+      margin-right: 10px;
+      border-radius: 4px;
+      border: 1px solid #ccc;
+    }
+    button {
+      padding: 10px 20px;
+      border: none;
+      background-color: #4CAF50;
+      color: white;
+      border-radius: 4px;
+      cursor: pointer;
+    }
+    button:hover {
+      background-color: #45a049;
+    }
+  </style>
 </head>
 <body>
 
-<h2>Chat with AI</h2>
-<div id="chatbox"></div>
-<input type="text" id="userInput" placeholder="Type your message...">
-<button onclick="sendMessage()">Send</button>
+  <div id="chatbox">
+    <div id="chatHistory"></div>
+    <input type="text" id="userInput" placeholder="Ask me anything..." />
+    <button onclick="sendMessage()">Send</button>
+  </div>
 
-<script>
-    const apiKey = "YOUR_OPENAI_API_KEY";  // 🔴 Replace with your OpenAI API key
-    const participantID = new URLSearchParams(window.location.search).get("participantID") || "unknown";
-    let chatHistory = [];
+  <script>
+    // Retrieve the participantId and OpenRouterAPIKey from Qualtrics Embedded Data
+    const participantId = Qualtrics.SurveyEngine.getEmbeddedData("participantId");
+    const OpenRouterAPIKey = Qualtrics.SurveyEngine.getEmbeddedData("OpenRouterAPIKey");
+    const OpenAIEndpoint = Qualtrics.SurveyEngine.getEmbeddedData("OpenAIEndpoint");
 
-    function displayMessage(sender, message) {
-        document.getElementById("chatbox").innerHTML += `<p><strong>${sender}:</strong> ${message}</p>`;
-        document.getElementById("chatbox").scrollTop = document.getElementById("chatbox").scrollHeight;
+    // This function saves the chat history as embedded data in Qualtrics
+    function saveChatHistory(chatHistory) {
+      Qualtrics.SurveyEngine.setEmbeddedData("chatHistory", JSON.stringify(chatHistory));
     }
 
+    // This function sends the message and processes the response
     async function sendMessage() {
-        let userInput = document.getElementById("userInput").value.trim();
-        if (!userInput) return;
+      const userMessage = document.getElementById("userInput").value;
+      if (!userMessage.trim()) return; // Don't send if the input is empty
 
-        // Display user's message
-        chatHistory.push({ role: "user", content: userInput });
-        displayMessage("You", userInput);
-        document.getElementById("userInput").value = "";
+      // Display user message in the chat history
+      updateChatHistory("You", userMessage);
 
-        // Call OpenAI API
-        const response = await fetch("https://api.openai.com/v1/chat/completions", {
-            method: "POST",
-            headers: {
-                "Content-Type": "application/json",
-                "Authorization": `Bearer ${apiKey}`
-            },
-            body: JSON.stringify({
-                model: "gpt-3.5-turbo",
-                messages: chatHistory,
-                temperature: 0.7
-            })
-        });
+      // Send the message to OpenRouter, which will forward to OpenAI
+      const response = await sendToOpenRouter(userMessage);
 
-        const data = await response.json();
-        const aiReply = data.choices[0].message.content;
+      // Display OpenAI's response
+      updateChatHistory("Bot", response);
 
-        // Display AI response
-        chatHistory.push({ role: "assistant", content: aiReply });
-        displayMessage("AI", aiReply);
+      // Save the updated chat history to Qualtrics
+      saveChatHistory(chatHistory);
 
-        // Send chat history to Qualtrics
-        sendToQualtrics();
+      // Clear the input field
+      document.getElementById("userInput").value = "";
     }
 
-    function sendToQualtrics() {
-        if (window.parent && window.parent.postMessage) {
-            window.parent.postMessage({ ChatHistory: JSON.stringify(chatHistory) }, "*");
-        }
+    // Function to update chat history on the UI
+    function updateChatHistory(sender, message) {
+      const chatHistoryDiv = document.getElementById("chatHistory");
+      chatHistoryDiv.innerHTML += `<p><strong>${sender}:</strong> ${message}</p>`;
+      chatHistoryDiv.scrollTop = chatHistoryDiv.scrollHeight; // Scroll to the latest message
     }
-</script>
+
+    // Send user message to OpenRouter endpoint
+    async function sendToOpenRouter(userMessage) {
+      const response = await fetch(OpenAIEndpoint, {
+        method: "POST",
+        headers: {
+          "Content-Type": "application/json",
+          "Authorization": `Bearer ${OpenRouterAPIKey}` // Add the API key to headers
+        },
+        body: JSON.stringify({
+          message: userMessage,
+          participantId: participantId // Pass participantId to track chat session
+        })
+      });
+
+      const data = await response.json();
+      return data.reply; // The reply from OpenAI (via OpenRouter)
+    }
+
+    // Initialize an empty chat history array (you can store more details as needed)
+    const chatHistory = [];
+  </script>
 
 </body>
 </html>
