--- a/chat.html
+++ b/chat.html
@@ -3,157 +3,116 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Chatbot Interface</title>
+  <title>Chat with OpenAI (via OpenRouter)</title>
   <style>
+    /* Basic styling for the chat interface */
     body {
       font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-      background-color: #f0f2f5;
+      padding: 10px;
+      background-color: #f9f9f9;
     }
-    #chatContainer {
+    #chatbox {
       width: 100%;
       max-width: 600px;
       margin: 0 auto;
       background-color: white;
-      border-radius: 10px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-      padding: 20px;
-      height: 80vh;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-    }
-    #chatBox {
-      flex-grow: 1;
-      overflow-y: auto;
-      padding: 10px;
-      background-color: #f9f9f9;
       border-radius: 8px;
-      margin-bottom: 10px;
-      max-height: 60vh;
+      padding: 20px;
+      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     }
-    #userInput {
-      width: 100%;
+    #chatHistory {
+      max-height: 400px;
+      overflow-y: auto;
+      margin-bottom: 20px;
+    }
+    input[type="text"] {
+      width: 80%;
       padding: 10px;
+      margin-right: 10px;
+      border-radius: 4px;
       border: 1px solid #ccc;
-      border-radius: 5px;
-      font-size: 16px;
-      margin-top: 10px;
     }
-    #sendMessage {
-      display: none;  /* We will not use this, as pressing Enter will submit the message */
+    button {
+      padding: 10px 20px;
+      border: none;
+      background-color: #4CAF50;
+      color: white;
+      border-radius: 4px;
+      cursor: pointer;
     }
-    .message {
-      margin-bottom: 10px;
-      padding: 10px;
-      border-radius: 5px;
-      max-width: 80%;
-    }
-    .userMessage {
-      background-color: #dcf8c6;
-      align-self: flex-end;
-    }
-    .botMessage {
-      background-color: #ffffff;
-      border: 1px solid #ccc;
-      align-self: flex-start;
-    }
-    .thinking {
-      text-align: center;
-      font-style: italic;
-      color: gray;
-      display: none;
-    }
-    .thinking.visible {
-      display: block;
+    button:hover {
+      background-color: #45a049;
     }
   </style>
 </head>
 <body>
-  <div id="chatContainer">
-    <div id="chatBox"></div>
-    <div id="thinking" class="thinking">AI is thinking...</div>
-    <textarea id="userInput" placeholder="Type your message..."></textarea>
+
+  <div id="chatbox">
+    <div id="chatHistory"></div>
+    <input type="text" id="userInput" placeholder="Ask me anything..." />
+    <button onclick="sendMessage()">Send</button>
   </div>
 
   <script>
-    let chatHistory = [];
+    // Retrieve the participantId and OpenRouterAPIKey from Qualtrics Embedded Data
+    const participantId = Qualtrics.SurveyEngine.getEmbeddedData("participantId");
+    const OpenRouterAPIKey = Qualtrics.SurveyEngine.getEmbeddedData("OpenRouterAPIKey");
+    const OpenAIEndpoint = Qualtrics.SurveyEngine.getEmbeddedData("OpenAIEndpoint");
 
-    // Get the embedded participant ID and store it
-    //const participantId = "${e://Field/participantId}";  // Replace with embedded participant variable
-    const participantId = new URLSearchParams(window.location.search).get("participantId");
-
-
-    // Update the chat box with conversation history
-    function updateChatBox() {
-      const chatBox = document.getElementById("chatBox");
-      chatBox.innerHTML = ""; // Clear previous messages
-      chatHistory.forEach(message => {
-        const messageElement = document.createElement("div");
-        messageElement.classList.add("message", message.role === "user" ? "userMessage" : "botMessage");
-        messageElement.innerHTML = message.content;
-        chatBox.appendChild(messageElement);
-      });
-      chatBox.scrollTop = chatBox.scrollHeight; // Scroll to the latest message
-    }
-
-    // Display thinking animation
-    function showThinkingAnimation() {
-      const thinking = document.getElementById("thinking");
-      thinking.classList.add("visible");
-    }
-
-    function hideThinkingAnimation() {
-      const thinking = document.getElementById("thinking");
-      thinking.classList.remove("visible");
-    }
-
-    // Send user message to OpenAI API via OpenRouter
-    async function sendToOpenAI(userMessage) {
-      // Show thinking animation
-      showThinkingAnimation();
-
-      const response = await fetch('https://your-openrouter-endpoint.com/proxy', { // Replace with OpenRouter endpoint
-        method: 'POST',
-        headers: {
-          'Content-Type': 'application/json',
-        },
-        body: JSON.stringify({
-          prompt: userMessage,
-          history: chatHistory.map(msg => msg.content).join("\n"), // Provide history to OpenAI
-        }),
-      });
-
-      const data = await response.json();
-      const botMessage = data.reply; // Adjust based on your response format
-
-      // Add user message and bot message to history
-      chatHistory.push({ role: "user", content: userMessage });
-      chatHistory.push({ role: "bot", content: botMessage });
-
-      // Hide thinking animation and update the chat box
-      hideThinkingAnimation();
-      updateChatBox();
-
-      // Send the conversation history to Qualtrics as embedded data
+    // This function saves the chat history as embedded data in Qualtrics
+    function saveChatHistory(chatHistory) {
       Qualtrics.SurveyEngine.setEmbeddedData("chatHistory", JSON.stringify(chatHistory));
     }
 
-    // Handle 'Enter' key to send message
-    document.getElementById("userInput").addEventListener("keydown", (event) => {
-      if (event.key === "Enter" && !event.shiftKey) {
-        event.preventDefault();
-        const userMessage = document.getElementById("userInput").value.trim();
-        if (userMessage !== "") {
-          sendToOpenAI(userMessage);
-          document.getElementById("userInput").value = "";  // Clear input field
-        }
-      }
-    });
+    // This function sends the message and processes the response
+    async function sendMessage() {
+      const userMessage = document.getElementById("userInput").value;
+      if (!userMessage.trim()) return; // Don't send if the input is empty
 
-    // Initialize chat
-    updateChatBox();
+      // Display user message in the chat history
+      updateChatHistory("You", userMessage);
+
+      // Send the message to OpenRouter, which will forward to OpenAI
+      const response = await sendToOpenRouter(userMessage);
+
+      // Display OpenAI's response
+      updateChatHistory("Bot", response);
+
+      // Save the updated chat history to Qualtrics
+      saveChatHistory(chatHistory);
+
+      // Clear the input field
+      document.getElementById("userInput").value = "";
+    }
+
+    // Function to update chat history on the UI
+    function updateChatHistory(sender, message) {
+      const chatHistoryDiv = document.getElementById("chatHistory");
+      chatHistoryDiv.innerHTML += `<p><strong>${sender}:</strong> ${message}</p>`;
+      chatHistoryDiv.scrollTop = chatHistoryDiv.scrollHeight; // Scroll to the latest message
+    }
+
+    // Send user message to OpenRouter endpoint
+    async function sendToOpenRouter(userMessage) {
+      const response = await fetch(OpenAIEndpoint, {
+        method: "POST",
+        headers: {
+          "Content-Type": "application/json",
+          "Authorization": `Bearer ${OpenRouterAPIKey}` // Add the API key to headers
+        },
+        body: JSON.stringify({
+          message: userMessage,
+          participantId: participantId // Pass participantId to track chat session
+        })
+      });
+
+      const data = await response.json();
+      return data.reply; // The reply from OpenAI (via OpenRouter)
+    }
+
+    // Initialize an empty chat history array (you can store more details as needed)
+    const chatHistory = [];
   </script>
+
 </body>
 </html>
